--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css"
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons')
+@import '~prismjs/themes/prism-okaidia.css'
+
+body
+  margin: 0
+  overflow: hidden
+  background-color: #343a40
+
+.spacer
+  flex: 1 1 auto
